add project homepage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="js/isIE.js"></script>
     <script src="js/change.js"></script>
 
-    <title>Abner的小窝</title>
+    <title>FracGames</title>
 
 </head>
 
