--- a/ForceProject/index.html
+++ b/ForceProject/index.html
@@ -18,5 +18,13 @@
 
     <title>FracGames</title>
 </head>
+<body>
+     <header class="jumbotron">
+        <div class="container">
+            <p>This is all about our force project</p>
+        </div>
+    </header>
+</body>
+
 
 </html>
