--- a/ForceProject/index.html
+++ b/ForceProject/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/abnsunstyle.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap-social.css">
-    <link rel="stylesheet" href="css/picStyle.css">
-    <link rel="shotcut icon" href="images/dogAbner.ico">
-    <script src="js/isIE.js"></script>
-    <script src="js/change.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../css/abnsunstyle.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-social.css">
+    <link rel="shotcut icon" href="../images/dogAbner.ico">
+    <link rel="stylesheet" href="../css/picStyle.css">
+
+    <link href="../css/thumbnail-gallery.css" rel="stylesheet">
 
     <title>FracGames</title>
 </head>
