--- a/index.html
+++ b/index.html
@@ -538,6 +538,7 @@ table th,
 table td {
   padding: 6px 13px;
   border: 1px solid #ddd;
+  font-size: 0.85em;
 }
 
 table tr {
@@ -726,8 +727,8 @@ article, footer {
 article {
 	padding: 0 10px;
 	}
-
- </style>
+}
+</style>
 </head>
 <h1 id="-the-spirit-of-gravity-"><em>The Spirit of Gravity 重力之灵</em></h1>
 <h2 id="-">一</h2>
@@ -779,29 +780,29 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">childA</th>
-<th style="text-align:left">childB</th>
+<th style="text-align:center">childB</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">你还记得老人们谈起以前的生活吗</td>
+<td style="text-align:center">你还记得老人们谈起以前的生活吗</td>
 </tr>
 <tr>
 <td style="text-align:center">你是指人们以前住在地面上的事情？</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">对对，不觉的很可笑吗</td>
+<td style="text-align:center">对对，不觉的很可笑吗</td>
 </tr>
 <tr>
 <td style="text-align:center">我觉得那是爷爷在逗我们呢</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">对对，住在地上，那里不是漆黑一片嘛</td>
+<td style="text-align:center">对对，住在地上，那里不是漆黑一片嘛</td>
 </tr>
 </tbody>
 </table>
@@ -812,25 +813,25 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">Andi</th>
-<th style="text-align:left">neighbor1</th>
+<th style="text-align:center">neighbor1</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">我的梦想是住到更高层的地方去。</td>
+<td style="text-align:center">我的梦想是住到更高层的地方去。</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">这里根本晒不到太阳，衣服要三天才能晒干。</td>
+<td style="text-align:center">这里根本晒不到太阳，衣服要三天才能晒干。</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 </tbody>
 </table>
@@ -841,25 +842,25 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">Andi</th>
-<th style="text-align:left">neighbor2</th>
+<th style="text-align:center">neighbor2</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">（向上望）总有一天我会找到去往上一层的方法。</td>
+<td style="text-align:center">（向上望）总有一天我会找到去往上一层的方法。</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">根你这样说吧，上面绝对是另一个世界。</td>
+<td style="text-align:center">根你这样说吧，上面绝对是另一个世界。</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 </tbody>
 </table>
@@ -870,25 +871,25 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">Andi</th>
-<th style="text-align:left">warner</th>
+<th style="text-align:center">warner</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">小心！别掉下去。</td>
+<td style="text-align:center">小心！别掉下去。</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">一旦走出这里，便再也回不来了。</td>
+<td style="text-align:center">一旦走出这里，便再也回不来了。</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 </tbody>
 </table>
@@ -899,45 +900,45 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">Andi</th>
-<th style="text-align:left">watcher</th>
+<th style="text-align:center">watcher</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">你觉得现在的生活怎么样？</td>
+<td style="text-align:center">你觉得现在的生活怎么样？</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">想不想到外面去看看？</td>
+<td style="text-align:center">想不想到外面去看看？</td>
 </tr>
 <tr>
 <td style="text-align:center">外面是什么？</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">给你这个（哈扎克之环），你会用上的。</td>
+<td style="text-align:center">给你这个（哈扎克之环），你会用上的。</td>
 </tr>
 <tr>
 <td style="text-align:center">也许吧</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">你知道每当我在这个高度向下看的时候，有种力量驱使我往下跳</td>
+<td style="text-align:center">你知道每当我在这个高度向下看的时候，有种力量驱使我往下跳</td>
 </tr>
 <tr>
 <td style="text-align:center">你会回不来的</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">...</td>
+<td style="text-align:center">...</td>
 </tr>
 </tbody>
 </table>
@@ -949,21 +950,21 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">students</th>
-<th style="text-align:left">teacher</th>
+<th style="text-align:center">teacher</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">你们知道学校存在的意义吗</td>
+<td style="text-align:center">你们知道学校存在的意义吗</td>
 </tr>
 <tr>
 <td style="text-align:center">把人变成机器</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">没错</td>
+<td style="text-align:center">没错</td>
 </tr>
 </tbody>
 </table>
@@ -975,17 +976,17 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">Andi</th>
-<th style="text-align:left">businessman</th>
+<th style="text-align:center">businessman</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">这里是二手市场，看看有没有你需要的东西</td>
+<td style="text-align:center">这里是二手市场，看看有没有你需要的东西</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 </tbody>
 </table>
@@ -997,25 +998,25 @@ article {
 <thead>
 <tr>
 <th style="text-align:center">Andi</th>
-<th style="text-align:left">guard</th>
+<th style="text-align:center">guard</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">你知道吗，我觉得这个时代最荒谬的事情</td>
+<td style="text-align:center">你知道吗，我觉得这个时代最荒谬的事情</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td style="text-align:left">莫过于还有这种地方的存在</td>
+<td style="text-align:center">莫过于还有这种地方的存在</td>
 </tr>
 <tr>
 <td style="text-align:center">...</td>
-<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 </tbody>
 </table>
