--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ article {
 房子虽然越造越高，但频繁的地震能一下子把这些全都毁掉。
 虽然人类社会发展了几千年，人们依然日夜为房子操劳。住所依然是大多数人最大的经济负担。</p>
 </blockquote>
-<p><strong>树木的巨大化研究</strong></p>
+<p><b>树木的巨大化研究</b></p>
 <p>天才的科学家，通过直接修改植物基因，成功创造出了巨树种子。
 将这种子埋入土中，不出数月就能长成几百米高的巨树，直径可达几十米长。
 树枝结构稳定，分叉少。似乎在上面直接搭个房子再合适不过了，还能用枝干做房梁。
@@ -746,7 +746,7 @@ article {
 <p>为了成长到那种高度，巨树的根一直向下扎至几百米，巨树之间根枝交错缠绕。
 再大的地震也无法撼动它们。
 倒是暴风雨会对人们的生活造成些许影响。也是躲在房子里就不会有事的程度。</p>
-<p><strong>植被的消失</strong></p>
+<p><b>植被的消失</b></p>
 <p>巨树疯狂的生长，极强的环境适应能力，
 很快便覆盖了地球的大多数土地。
 人们完美地解决了住房问题，甚至小孩也有能力轻松造出自己的住所。
@@ -759,7 +759,7 @@ article {
 食草动物望着巨树高耸的身躯，慢慢饿死。
 少数能力强的物种，学会了爬树技能，据说是猿类教授它们的。
 而对于人们来说，这些生活在森林中的动物，只是一些打扰休息，窃取食物，破坏秩序的噪声。</p>
-<p><strong>巨树的意识</strong></p>
+<p><b>巨树的意识</b></p>
 <p>“这些巨树活上千年问题不大。”科学家们在媒体上做出保证。
 对此人们也是深信不疑。当他们把种子埋入土中便已有所觉悟，这种子的力量，足以完全改变原本的环境。
 几个月后，巨树便进入了长久的休眠期，它们也随四季更替，只是几乎不再生长。进入了一种自给自足的状态。
