--- a/ForceProject/2.html
+++ b/ForceProject/2.html
@@ -122,4 +122,7 @@
 <div style="text-align: left">
     <a href="../index.html"> <-- previous </a> 
 </div>
+<div style="text-align: right">
+    <a href="3.html">--> next</a> 
+</div>
 </html>
