--- a/index.html
+++ b/index.html
@@ -9,298 +9,32 @@
     <title>FracGames</title>
      <link href = "css/markdown.css" rel = "stylesheet">
 </head>
-<h1 id="-the-spirit-of-gravity-"><em>The Spirit of Gravity 重力之灵</em></h1>
-<h2 id="-">一</h2>
-<blockquote>
-<p>未来的大地再也无法容纳巨大数量人类的居住。
-房子虽然越造越高，但频繁的地震能一下子把这些全都毁掉。
-虽然人类社会发展了几千年，人们依然日夜为房子操劳。住所依然是大多数人最大的经济负担。</p>
-</blockquote>
-<p><b>树木的巨大化研究</b></p>
-<p>天才的科学家，通过直接修改植物基因，成功创造出了巨树种子。
-将这种子埋入土中，不出数月就能长成几百米高的巨树，直径可达几十米长。
-树枝结构稳定，分叉少。似乎在上面直接搭个房子再合适不过了，还能用枝干做房梁。
-甚至直接挖开粗树枝，几天时间就能做出个不小的住处。
-把坚固的藤蔓做成楼梯，把向外延伸的枝干做成桥梁，把厚实的叶子当作床铺。</p>
-<p>为了成长到那种高度，巨树的根一直向下扎至几百米，巨树之间根枝交错缠绕。
-再大的地震也无法撼动它们。
-倒是暴风雨会对人们的生活造成些许影响。也是躲在房子里就不会有事的程度。</p>
-<p><b>植被的消失</b></p>
-<p>巨树疯狂的生长，极强的环境适应能力，
-很快便覆盖了地球的大多数土地。
-人们完美地解决了住房问题，甚至小孩也有能力轻松造出自己的住所。
-有时，一棵巨树只住上几个人，居住面积之大是以前无法想象的。
-而探索极限的科学家们，正在研究如何让巨树适应缺水的沙漠环境。
-毕竟它们可以利用几百米长的树根，覆盖大片地下土壤，吸收两百米下氮磷钾。</p>
-<p>随着巨树遮蔽天空，没过多久，原本的地被，灌木完全得不到光照，相继消失。
-它们成了巨树天然的肥料。
-再到后来，乔木之类的也没了踪迹。
-食草动物望着巨树高耸的身躯，慢慢饿死。
-少数能力强的物种，学会了爬树技能，据说是猿类教授它们的。
-而对于人们来说，这些生活在森林中的动物，只是一些打扰休息，窃取食物，破坏秩序的噪声。</p>
-<p><b>巨树的意识</b></p>
-<p>“这些巨树活上千年问题不大。”科学家们在媒体上做出保证。
-对此人们也是深信不疑。当他们把种子埋入土中便已有所觉悟，这种子的力量，足以完全改变原本的环境。
-几个月后，巨树便进入了长久的休眠期，它们也随四季更替，只是几乎不再生长。进入了一种自给自足的状态。
-它们同样也不生产种子。似乎听说有人见过巨树生长出的种子，不过也只是传闻。而具体原因，算是未解之谜。也许巨树是有意识这样。
-种子对于它们来说，也是一种灾难，当种子落入土地之后，它将与母亲争夺养分，为了自身的存货，年轻的树苗必须快速生长，争夺阳光。
-这种竞争也是相当残酷，对于母体来说也是如此。
-一小片土地无法容纳两棵巨树。</p>
-<p>繁衍后代对于它们也没什么必要，它们已然占领了陆地，又能活上千年，不必担心种族灭绝的问题。
-也许在一棵巨树大限将至时，它会产出自己最后的种子吧。人们是这样猜测。
-不过，那都是千年后的事情了。</p>
-<h2 id="-">二</h2>
-<h3 id="-">重力的意志</h3>
-<p>安蒂(<del>安迪</del> Andi)在房中摆弄着邻居送她的头饰。虽然这个时代已经没有住房问题了，安蒂她们依然居住的略显拥挤。</p>
-<blockquote>
-<p>邻居小孩的对话</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">childA</th>
-<th style="text-align:center">childB</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">你还记得老人们谈起以前的生活吗</td>
-</tr>
-<tr>
-<td style="text-align:center">你是指人们以前住在地面上的事情？</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">对对，不觉的很可笑吗</td>
-</tr>
-<tr>
-<td style="text-align:center">我觉得那是爷爷在逗我们呢</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">对对，住在地上，那里不是漆黑一片嘛</td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>Andi和邻居的对话</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">Andi</th>
-<th style="text-align:center">neighbor1</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">我的梦想是住到更高层的地方去。</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">这里根本晒不到太阳，衣服要三天才能晒干。</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>Andi和邻居的对话</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">Andi</th>
-<th style="text-align:center">neighbor2</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">（向上望）总有一天我会找到去往上一层的方法。</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">根你这样说吧，上面绝对是另一个世界。</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>Andi和警告者的对话</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">Andi</th>
-<th style="text-align:center">warner</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">小心！别掉下去。</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">一旦走出这里，便再也回不来了。</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>Andi和注视者的对话</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">Andi</th>
-<th style="text-align:center">watcher</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">你觉得现在的生活怎么样？</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">想不想到外面去看看？</td>
-</tr>
-<tr>
-<td style="text-align:center">外面是什么？</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">给你这个（哈扎克之环），你会用上的。</td>
-</tr>
-<tr>
-<td style="text-align:center">也许吧</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">你知道每当我在这个高度向下看的时候，有种力量驱使我往下跳</td>
-</tr>
-<tr>
-<td style="text-align:center">你会回不来的</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">...</td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>学生和教育者的对话</p>
-<p>(<del>孩子们在上课</del>)</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">students</th>
-<th style="text-align:center">teacher</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">你们知道学校存在的意义吗</td>
-</tr>
-<tr>
-<td style="text-align:center">把人变成机器</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">没错</td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>Andi和商人的对话</p>
-<p>(跳蚤市场)</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">Andi</th>
-<th style="text-align:center">businessman</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">这里是二手市场，看看有没有你需要的东西</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>Andi和狱警的对话</p>
-<p>(监狱门口)</p>
-</blockquote>
-<table>
-<thead>
-<tr>
-<th style="text-align:center">Andi</th>
-<th style="text-align:center">guard</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">你知道吗，我觉得这个时代最荒谬的事情</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-<tr>
-<td style="text-align:center"></td>
-<td style="text-align:center">莫过于还有这种地方的存在</td>
-</tr>
-<tr>
-<td style="text-align:center">...</td>
-<td style="text-align:center"></td>
-</tr>
-</tbody>
-</table>
 
-<div style="text-align: right">
-    <a href="ForceProject/2.html">--> next</a> 
+<h1 id="demo-v0-13-">demo v0.13版本</h1>
+<p><img src="Logo.png" alt="Seeder Logo"  width="50%"  style="
+    padding-left: 20%;
+"></p>
+<blockquote>
+<p>demo版本的下载地址：</p>
+<p><a href="http://pan.baidu.com/s/1kVx95Dt">Seeder Demo V0.13</a></p>
+<p><del>完成度低仅仅处于“能玩”的程度操作反人类且有大量暴力元素</del></p>
+<p>解压密码：fracgames</p>
+<hr>
+<p>操作方法：</p>
+<p>（键盘：空格或手柄：A）</p>
+<p>跳跃/与NPC进行对话    </p>   
+<p>（键盘：AD或手柄：左摇杆）</p>
+<p>左右移动               </p>
+<p>（键盘：左右方向键或手柄LB，RB）</p>   
+<p>旋转重力方向          </p>  
+<p>（键盘：E或手柄：X）</p>
+<p>增大物体重力        </p>
+<hr>
+<p>游戏有bug? 有想法想反馈?</p>
+<p>可以发邮件到abnsun@outlook.com</p>
+<p><del>至于会不会看就不知道了</del></p>
+</blockquote>
+<div style="text-align: left">
+    <a href="2.html"> <-- previous </a> 
 </div>
 </html>
