--- a/ForceProject/1.html
+++ b/ForceProject/1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>FracGames</title>
-     <link href = "css/markdown.css" rel = "stylesheet">
+     <link href = "../css/markdown.css" rel = "stylesheet">
 </head>
 <h1 id="-the-spirit-of-gravity-"><em>The Spirit of Gravity 重力之灵</em></h1>
 <h2 id="-">一</h2>
@@ -299,8 +299,10 @@
 </tr>
 </tbody>
 </table>
-
+<div style="text-align: left">
+    <a href="../index.html"> <-- previous </a> 
+</div>
 <div style="text-align: right">
-    <a href="ForceProject/2.html">--> next</a> 
+    <a href="2.html">--> next</a> 
 </div>
 </html>
