--- a/ForceProject/2.html
+++ b/ForceProject/2.html
@@ -120,9 +120,6 @@
 <p>“我会将你带去大地”</p>
 </blockquote>
 <div style="text-align: left">
-    <a href="../index.html"> <-- previous </a> 
-</div>
-<div style="text-align: right">
-    <a href="3.html">--> next</a> 
+    <a href="1.html"> <-- previous </a> 
 </div>
 </html>
