--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>可以发邮件到abnsun@outlook.com</p>
 <p><del>至于会不会看就不知道了</del></p>
 </blockquote>
-<div style="text-align: left">
-    <a href="2.html"> <-- previous </a> 
+<div style="text-align: right">
+    <a href="ForceProject/1.html"> next --> </a> 
 </div>
 </html>
