--- a/index.html
+++ b/index.html
@@ -20,15 +20,39 @@
 <p><del>完成度低仅仅处于“能玩”的程度操作反人类且有大量暴力元素</del></p>
 <p>解压密码：fracgames</p>
 <hr>
-<p>操作方法：</p>
-<p>（键盘：空格或手柄：A）</p>
-<p>跳跃/与NPC进行对话    </p>   
-<p>（键盘：AD或手柄：左摇杆）</p>
-<p>左右移动               </p>
-<p>（键盘：左右方向键或手柄LB，RB）</p>   
-<p>旋转重力方向          </p>  
-<p>（键盘：E或手柄：X）</p>
-<p>增大物体重力        </p>
+<h1 id="-">操作说明</h1>
+<table>
+<thead>
+<tr>
+<th style="text-align:center">按键</th>
+<th style="text-align:left">手柄</th>
+<th style="text-align:left">操作</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">A / D</td>
+<td style="text-align:left">左摇杆</td>
+<td style="text-align:left">左右移动</td>
+</tr>
+<tr>
+<td style="text-align:center">空格</td>
+<td style="text-align:left">A</td>
+<td style="text-align:left">跳跃/与NPC进行对话</td>
+</tr>
+<tr>
+<td style="text-align:center">← / →</td>
+<td style="text-align:left">LB / RB</td>
+<td style="text-align:left">旋转重力方向</td>
+</tr>
+<tr>
+<td style="text-align:center">E</td>
+<td style="text-align:left">X</td>
+<td style="text-align:left">增大物体重力</td>
+</tr>
+</tbody>
+</table>
+
 <hr>
 <p>游戏有bug? 有想法想反馈?</p>
 <p>可以发邮件到abnsun@outlook.com</p>
