--- a/demo/index.html
+++ b/demo/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | 刺死辱母者</title>
-    <link rel="shortcut icon" href="http://ooi7k7jkm.bkt.clouddn.com/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="http://ooi7k7jkm.bkt.clouddn.com/TemplateData/style.css">
-    <script src="http://ooi7k7jkm.bkt.clouddn.com/TemplateData/UnityProgress.js"></script>
-    <script src="http://ooi7k7jkm.bkt.clouddn.com/demo/UnityLoader.js"></script>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
     <script>
         var gameInstance = UnityLoader.instantiate("gameContainer", "Build/web.json", {
             onProgress: UnityProgress
